# open-swe

./: .ai_publish_state.json  .env.example  .env.playwright  .fix_agent_docs_state.json  .fix_agent_memory.json  .fix_agent_metrics.json  .fix_agent_pattern_eval.json  .fix_agent_pattern_memory.json  .fix_agent_recent.json  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CUSTOMIZATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.sandbox  GITLAB_IMPLEMENTATION_SUMMARY.md  GITLAB_SETUP.md  HIGH_PRIORITY_IMPLEMENTATION.md  INSTALLATION.md  INTER_SERVICE_COMMUNICATION.md  LangGraph.md  Makefile  NVIDIA_NIM_JSON_FIX_README.md  PROVIDER_ABSTRACTION_REFACTORING.md  QUICK_START_AFTER_JSON_FIX.md  README.md  REBUILD_PLAN.md  REVIEWER_DESIGN.md  SECURITY.md  SESSION_SUMMARY_OCT_20_2025.md  SETUP-LOCAL.md  VULTR_DEPLOYMENT_GUIDE.md  VULTR_HARDWARE_SPECS.md  agent_project_plan.md  agent_project_plan_cn.md  app.py  azure-deploy.yml  (+47 more)
apps/agent/: Makefile  README.md  langgraph.json  pyproject.toml
apps/agent/agent/: __init__.py  middleware.py  prompt.py  protocol.py  server.py  webapp.py
apps/agent/agent/integrations/: __init__.py  langsmith.py
apps/agent/agent/middleware/: __init__.py  check_message_queue.py  ensure_no_empty_msg.py  open_pr.py  post_to_linear.py  timeout_execute_tool.py  tool_error_handler.py
apps/agent/agent/tools/: __init__.py  commit_and_open_pr.py  github_thread_reply.py  linear_comment.py
apps/agent/agent/utils/: agents_md.py  auth.py  comments.py  github.py  github_comments.py  (+6 more)
apps/agent/tests/: test_auth_sources.py  test_ensure_no_empty_msg.py  test_multimodal.py  test_slack_context.py
(+2038 files in other folders)
